fix(webapp): Fix pixel overflow in sidebar on hover

--- a/webapp/channels/src/components/drafts/drafts_link/drafts_link.scss
+++ b/webapp/channels/src/components/drafts/drafts_link/drafts_link.scss
@@ -29,7 +29,6 @@
             padding-right: 16px;
 
             .badge {
-                position: initial;
                 visibility: visible;
             }
         }
