--- a/webapp/channels/src/components/threading/global_threads_link/global_threads_link.scss
+++ b/webapp/channels/src/components/threading/global_threads_link/global_threads_link.scss
@@ -30,7 +30,6 @@
             padding-right: 16px;
 
             .badge {
-                position: initial;
                 visibility: visible;
             }
         }
